# CTS-SAT-2-OBC-Firmware

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: clippy.yml  rust.yml
cts2_obc_firmware/: Cargo.toml
cts2_obc_firmware/.cargo/: config.toml
cts2_obc_firmware/src/: external_nand_flash_driver.rs  flash_main.rs  main.rs  tcmd_uart.rs  telecommand_implementation.rs  timekeeping.rs  umbilical_uart.rs
cts2_obc_firmware/src/telecommand_implementation/: demo_commands.rs
cts2_obc_logic/: Cargo.toml
cts2_obc_logic/src/: custom_string_buffer_logic.rs  lib.rs  scheduler.rs
cts2_obc_telecommands/: Cargo.toml
cts2_obc_telecommands/src/: config.rs  lib.rs
docs/procedure/: How_to_Review_a_PR.md
src/: main.rs
