[workspace]
members = ["cts2_obc_firmware", "cts2_obc_logic", "cts2_obc_telecommands"]

# Set the default member, which is used when you run `cargo embed` from the
# workspace root.
default-members = ["cts2_obc_firmware"]

resolver = "3"

[workspace.package]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
