[workspace]
members = ["cts2_obc_firmware", "cts2_obc_logic", "cts2_obc_telecommands"]

# Set the default member, which is used when you run `cargo embed` from the
# workspace root.
default-members = ["cts2_obc_firmware"]

resolver = "3"

[workspace.package]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.lints.clippy]
# "deny" means that violations will cause the build to fail.
# "warn" means that violations will be reported, but will not fail the build.
all         = "warn"
pedantic    = "warn"
nursery     = "warn"
cargo       = "warn"
restriction = "warn"
