[package]
name = "cts2_obc_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal creates.
cts2_obc_logic = { path = "../cts2_obc_logic" }
cts2_obc_telecommands = { path = "../cts2_obc_telecommands" }

# External crates.
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nb = "1.1.0"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
static_cell = "2.1.1"

[dependencies.stm32l4xx-hal]
# TODO: Ideally, this branch will be merged into the main stm32l4xx-hal repo.
# If it is not merged within a few months, and if this MCU is continued to be used,
# then CalgaryToSpace should fork and vendor its own copy of stm32l4xx-hal.
# Commit hash: 2825d981227938c68949b32f77cdf86e3ea9e24e
git = "https://github.com/DeflateAwning/stm32l4xx-hal.git"
branch = "fork-upgrade-pac-plus-l4r5"
features = ["rt", "stm32l4r5"]
